--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,12 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.coffee-cards figure:hover{
+    transform: scale(1.05);
+    transition: all 0.5s ease-in-out;
+}
+
 .coffee-cards figure figcaption h3{
     text-align: center;
     
