--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     height: 70px;
     box-shadow: 0 4px 10px rgba(0,0,0,.1);
+    color: #fff;
 }
 
 .navbar .container {
@@ -34,6 +35,7 @@ body {
 
 .navbar-menu li {
     display: inline-block;
+    transition: opacity .1s ease-in-out;
     
 }
 
@@ -43,7 +45,7 @@ body {
     color:#000;
     opacity: 0.6;
     padding: 10px;
-    transition: all .1s ease-in-out;
+    
 }
 
 .navbar-menu li a:hover {
@@ -61,16 +63,18 @@ body {
     text-decoration: none;
     color:#fff;
     border-radius: 100px;
+    margin-right: 30px;
     margin-left: 30px;
     padding: 20px 30px;
     box-shadow: 0 4px 6px rgba(255, 127, 80, .2);
     transition: all .1s ease-out;
+    transition: transform .3s ease-in-out;
     
 }
 
 .callback:hover {
     transform: scale(1.06);
-    transition: all .3s ease-in-out;
+    
     box-shadow: 0 9px 9px rgba(255, 127, 80, .5);
 }
 
@@ -80,15 +84,17 @@ body {
     text-decoration: none;
     margin-right:950px;
     color: #000;
+    transition: color .4s ease-in-out;
 }
 
 .container img{
     margin-left:30px
+    
 }
 
 .navbar-brand:hover {
     color: coral;
-    transition: all .4s ease-in-out;
+    
 
 }
 
@@ -108,7 +114,13 @@ body {
     background-color: rgb(255, 255, 255);
     padding: 40px;
     box-shadow:0 4px 10px rgba(0,0,0,.3);
+    transition: transform 0.5s ease-in-out;
 }
+
+.coffee-cards figure:hover{
+    transform: scale(1.05);
+}
+
 
 .coffee-cards figure img{
     width: 100%;
@@ -134,11 +146,6 @@ body {
     justify-content: space-between;
 }
 
-.coffee-cards figure:hover{
-    transform: scale(1.05);
-    transition: all 0.5s ease-in-out;
-}
-
 .coffee-cards figure figcaption h3{
     text-align: center;
     
@@ -147,12 +154,12 @@ body {
 .coffee-cards figure figcaption a{
     color: #000;
     opacity: 0.6;
-    
+    transition: opacity .1s ease-in-out
 }
 
 .coffee-cards figure figcaption a:hover{
     opacity: 1;
-    transition: all .1s ease-in-out
+    
 }
 
 .foot{
@@ -175,13 +182,13 @@ body {
 
 .links li a{
     text-decoration: none;
-    color:#fff;
+    color:rgb(255, 255, 255);
+    transition: color .1s ease-in-out;
 }
 
 .links li a:hover{
     color:#000;
     opacity: 0.6;
-    transition: all .1s ease-in-out;
 }
 
 .links-menu li{
@@ -192,11 +199,14 @@ body {
 .social-icons{
     display:flex;
     justify-content: space-between;
+    
 }
 
+.social-icons a{
+    transition: transform 0.3s ease-in-out;
+}
 .social-icons a:hover{
     transform: scale(1.1);
-    transition: all 0.2s ease-in-out;
 }
 
 .contact inside{
@@ -210,11 +220,12 @@ body {
     color:rgb(0, 0, 0);
     opacity:0.6;
     text-decoration: none;
+    transition: opacity 0.1s ease-in-out
 }
 
 .contact a:hover{
     opacity:1;
-    transition:all 0.1s ease-in-out
+    
 }
 
 .esp-container{
@@ -276,9 +287,127 @@ div#cafe {
 
 .elegant img{
     margin-top:20px;
+    transition: opacity 0.4s ease-in-out;
 }
 
 .elegant img:hover{
     opacity: 0.9;
-    transition: all 0.4s ease-in-out;
+}
+
+.place-in{
+    display: flex;
+    text-align: center;
+}
+
+.place-in img{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.adress h1{
+    margin-top: 100px;
+}
+
+.adress p{
+    font-family: Tahoma, Geneva, sans-serif;
+}
+
+.adress h3{
+    margin-top: 200px;
+    font-weight: 700; 
+    font-size: 26px;
+}
+
+.callback-case{
+    box-shadow: 0px 4px 4px 10px rgba(0,0,0,.1);
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    background-image: url(img/cbg.jpg);
+}
+.callback-form{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color: coral;
+    margin:20px;
+    height:800px;
+    width:800px;
+    box-shadow: 0 4px 10px rgba(0,0,0,.1);
+    border-radius: 5%;
+    text-align: center;
+}
+
+.callback-form h1{
+    color: #fff;
+}
+
+input {
+    border: 1px solid #bdbdbd;
+    display: block;
+    width: 400px;
+    font-family: inherit; 
+    font-size: inherit; 
+    line-height: inherit; 
+    margin: 0;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    resize: none;
+  }
+
+.input-name{
+    display: flex;
+    justify-content: center;
+}
+
+.input-mail{
+    display: flex;
+    justify-content: center;
+}
+
+.input-adress{
+    display: flex;
+    justify-content: center;
+}
+
+.input-response{
+    display: flex;
+    justify-content: center;
+}
+
+.callback-button{
+    margin:50px;
+    margin-left: 315px;
+    height:25px;
+    width:150px;
+    padding: 10px;
+    background: #fff;
+    box-shadow: 0px 4px 10px rgba(0,0,0, 0.1);
+    border-radius: 100px;
+    transition: all .1s ease-out;
+    transition: transform .3s ease-in-out;
+}
+
+.callback-button:hover{
+    transform: scale(1.06)
+
+}
+
+.callback-button p1{
+    margin-top: 10px;
+}
+
+.callback-button a{
+    text-decoration: none;
+    color: #000;
+}
+
+.input-response textarea{
+    border: 1px solid #bdbdbd;
+
+    font-family: inherit; 
+    font-size: inherit; 
+    line-height: inherit; 
+    width:400px;
+    height: 300px;
+    resize: none;
 }
